# mcs_mods

./: .gitignore  .gitmodules  ADDON_DEVELOPMENT_GUIDE.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  run_integration_tests.py  run_tests.py  server_wrapper.py  test_connection.py  valid_known_packs.json
addons/behavior_packs/blaster_weapons/: manifest.json
addons/behavior_packs/blaster_weapons/entities/: arrow.json  blaster_bolt.json
addons/behavior_packs/blaster_weapons/items/: bow.json
addons/behavior_packs/enhanced_pickaxe/: README.md  manifest.json
addons/behavior_packs/enhanced_pickaxe/entities/: blaster_bolt.json
addons/behavior_packs/enhanced_pickaxe/functions/: enhance_tools.mcfunction  tick.json
addons/behavior_packs/enhanced_pickaxe/items/: blaster.json  blaster_bolt.json  diamond_pickaxe.json  golden_pickaxe.json  iron_pickaxe.json  lightsaber.json  netherite_pickaxe.json  stone_pickaxe.json  (+1 more)
addons/behavior_packs/enhanced_tools/: manifest.json
addons/resource_packs/blaster_resources/: manifest.json
addons/resource_packs/lightsaber_resources/: manifest.json
behavior_packs/: README.md
config/: allowlist.json  permissions.json  server.properties
logs/: README.md
resource_packs/: README.md
tests/: conftest.py  test_api.py  test_integration.py  test_manage_cli.py  test_server_manager.py
tests/fixtures/config/: allowlist.json  permissions.json  server.properties
world_configs/: world_behavior_packs.json  world_resource_packs.json
(+6 files in other folders)
